[Fix] -> Removed extra margin from searchbox on the sidebar on Search page.

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -4686,7 +4686,7 @@ input[type="color"]::-webkit-color-swatch {
   border-bottom: 0;
 }
 
-.search .site-content .search-form {
+.search .site-content .content-area .search-form {
   margin-bottom: 3em;
 }
 
